Flowmini/flowmini_v24_explicit_ast/examples/pass/internal_record_demo.flow
program internal_record_demo

type Point {
    field x : int
    field y : int
}

fn sum_point(p : Point): int {
    result : int(0)
    p.x + p.y -> result
    result -> return
}

main {
    p : Point({x:10, y:32})
    value : int(0)
    forty_two : int(42)
    result : int(0)

    p.x -> value
    print value

    p.y -> value
    print value

    forty_two -> p.x
    p.x -> value
    print value

    sum_point(p) -> result
    print result
}
