Flowmini/flowmini_v24_explicit_ast/examples/fail/bad_record_unknown_field.flow
program bad_record_unknown_field

type Point {
    field x : int
    field y : int
}

main {
    p : Point({x:10, y:20, z:30})
    print 1
}
